refactored select bug on ios as it didnt work before

--- a/src/css/partials/_breathing.scss
+++ b/src/css/partials/_breathing.scss
@@ -55,8 +55,6 @@
   transform: translateY(50%);
   padding-left: 3%;
   z-index: 20;
-  -webkit-user-select: none;
-  -webkit-touch-callout: none;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
@@ -68,8 +66,6 @@
   transform: translateY(50%);
   padding-right: 3%;
   z-index: 20;
-  -webkit-user-select: none;
-  -webkit-touch-callout: none;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
@@ -82,8 +78,6 @@
   background: transparent;
   transform: translateY(50%);
   z-index: 15;
-  -webkit-user-select: none;
-  -webkit-touch-callout: none;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
@@ -111,8 +105,6 @@
   right: 0;
   text-align: center;
   font-size: 36px;
-  -webkit-user-select: none;
-  -webkit-touch-callout: none;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
